make the sidebar shorter to avoid extra whitespace

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -77,7 +77,7 @@ section#contact-card
   background-repeat: no-repeat
   display: block
   width: 196px
-  height: 543px
+  height: 420px
   padding: 200px 0 0
   div
     margin: 20px
